add base html and css

--- a/css/base.css
+++ b/css/base.css
@@ -1,1 +1,14 @@
+body {
+  line-height: 1.5;
+  margin: 0;
+}
 
+h2 {
+  margin-top: 0;
+}
+
+@media screen and (max-width: 960px) {
+  img {
+    width: 100%;
+  }
+}
