add pulse nimation and google font

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#8a2be2">
   <title>{% if page.title %}{{ page.title }} · {% endif %}Loading Animation{% if page.title-after %} · {{ page.title-after }}{% endif %}</title>
+  <!-- google font Robot Slab-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
   <!-- custom css -->
   <link rel="stylesheet" href="css/main.css">
 </head>
