update links, animations and add text animation

--- a/css/base.css
+++ b/css/base.css
@@ -2,13 +2,14 @@ body {
   font-family: 'Roboto Slab', serif;
   line-height: 1.5;
   margin: 0;
+  overflow: hidden;
 }
 
 h2 {
   margin-top: 0;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 400px) {
   img {
     width: 100%;
   }
