--- a/css/module.css
+++ b/css/module.css
@@ -1,8 +1,7 @@
 /* Add animation to spinner div */
 .spinner {
-  -webkit-animation: pulse 1.0s infinite ease-in-out;
-  animation: pulse 1.0s infinite ease-in-out;
-
+  -webkit-animation: pulse 1.0s infinite both ease-in-out;
+  animation: pulse 1.0s infinite both ease-in-out;
   background-color: #333;
   border-radius: 100%;
 
@@ -11,15 +10,18 @@
   margin: 100px auto;
 }
 
+/* pulse animation */
 @-webkit-keyframes pulse {
   0% {
     -webkit-transform: scale(0);
+    transform: scale(0);
   }
 
   100% {
-    background-color: blue;
+    background-color: #0000ff;
     opacity: 0;
     -webkit-transform: scale(1.5);
+    transform: scale(1.5);
   }
 }
 
@@ -30,9 +32,41 @@
   }
 
   100% {
-    background-color: blue;
+    background-color: #0000ff;
     opacity: 0;
     -webkit-transform: scale(1.5);
-    transform: scale(1.0);
+    transform: scale(1.5);
+  }
+}
+
+/* Add animation to page content */
+.animate-bottom {
+  position: relative;
+  -webkit-animation: animatebottom 1.0s both ease-in-out;
+  animation: animatebottom 1.0s both ease-in-out;
+}
+
+/* translate x animation */
+@-webkit-keyframes animatebottom {
+  from {
+    bottom:-100px;
+    opacity:0
+  }
+
+  to {
+    bottom:0px;
+    opacity:1;
+  }
+}
+
+@keyframes animatebottom {
+  from {
+    bottom:-100px;
+    opacity:0;
+  }
+
+  to {
+    bottom:0;
+    opacity:1;
   }
 }
